# csm_web

./: .babelrc  .babelrc.json  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .nodemon.sh  .pre-commit-config.yaml  .pre-commit.sh  .prettierignore  .prettierrc.json  .pylintrc  .stylelintrc.json  Dockerfile.django  Dockerfile.node  LICENSE  MERGE_MSG  Procfile  README.md  app.json  babel.config.js  cypress.config.ts  docker-compose.yml  docker-django-entrypoint.sh  docker-node-entrypoint.sh  drop-confirm-popup.java  jest.config.js  jest.config.ts  manage.py  models.dot  package-lock.json  package.json  pyproject.toml  release.sh  requirements.txt  setup.sh  setup_csm.sh  tsconfig.json  web.sh  webpack.config.js
.github/workflows/: cypress.yml  django.yml  nodejs.yml  pre-commit.yml
ci/: requirements.txt
csm_web/: manage.py  pytest.ini  requirements.txt
csm_web/csm_web/: admin.py  apps.py  common.py  gcal_reader.py  room_scouter.py  settings.py  urls.py  wsgi.py
csm_web/frontend/: urls.py  views.py
csm_web/frontend/src/: css.d.ts  images.d.ts  index.js  index.tsx
csm_web/logistinator/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
csm_web/logistinator/migrations/: 0001_initial.py  0002_auto_20190411_1911.py  0002_auto_20190411_2020.py  0002_auto_20190509_2037.py  0003_auto_20190418_1239.py  0003_matching_room_id.py  0004_auto_20190418_1417.py  0004_matching_weekly.py  0005_auto_20190411_1921.py  0006_auto_20190411_1938.py  0007_auto_20190411_1952.py  0008_auto_20190411_2011.py  0008_conflict.py
csm_web/logistinator_frontend/: apps.py  views.py
csm_web/logistinator_frontend/src/: index.js
csm_web/scheduler/: admin.py  apps.py  factories.py  models.py  permissions.py  serializers.py  signals.py  storage 2.pu  storage.py  test_models.py  urls.py  views.py
csm_web/scheduler/email/: email_errors.py  email_mocks.py  email_utils.py  quickstart.py
csm_web/scheduler/fixtures/: jonathan-populate.yaml  populate.yaml
csm_web/scheduler/migrations/: 0001_initial.py  0002_auto_20181124_0958.py  0002_auto_20181126_2312.py  0002_auto_20190127_1901.py  0002_auto_20190904_1653.py  0003_auto_20181126_2318.py  0003_auto_20190207_0048.py  0003_auto_20190904_2222.py  0004_auto_20181126_2319.py  0004_auto_20190407_1636.py  0004_auto_20190904_2325_squashed_0005_coordinator_course.py  0004_flag.py  0005_auto_20181130_0502.py  0005_auto_20190105_1458.py  0005_auto_20190911_1524.py  0006_auto_20190105_1500.py  0006_auto_20190915_1227.py  0007_auto_20200103_1530.py  0007_mentorbioinfo.py  0008_auto_20200105_2140.py  0008_auto_20200112_2051.py  0008_mentorbioinfo.py  0009_course_section_start.py  0010_student_banned.py  0011_auto_20200312_1704.py  0012_auto_20200312_1902.py  0013_auto_20200903_2338.py  0013_auto_20200906_1106.py  0014_auto_20200903_2340.py  0014_auto_20200906_1147.py  0015_auto_20200903_2357.py  0015_auto_20200906_1937.py  0016_auto_20200904_1547.py  0016_auto_20200913_2112.py  0017_auto_20200914_1108.py  0018_auto_20210802_2027.py  0018_auto_20210802_2123.py  0018_resource.py  0019_auto_20210721_0855.py  0020_auto_20210812_1643.py  (+60 more)
csm_web/scheduler/tasks/: create_attendances.py  schedule_resource.py  test_task.py
csm_web/scheduler/templates/: mentor_bio_form.html
csm_web/scheduler/tests/: old_test_api.py  old_test_enroll_drop.py  old_test_management.py  test_api.py  test_api_sanity.py  test_attendance_fields.py  test_database_sanity.py  test_enroll_drop.py  test_ghost_profile_maker.py  test_management.py  test_models.py  utils.py
csm_web/scheduler/utils/: match_solver.py  sign_document.py
csm_web/scheduler/views/: __init__.py  affinity_tags.py  coord.py  course.py  export.py  labels.py  matcher.py  profile.py  resource.py  search.py  section.py  sectionapiveiew.py  spacetime.py  student.py  swap.py  user.py  utils.py  waitlistedStudent.py  waitlistpos.py  wordoftheday.py
csm_web/templates/admin/: base_site.html
cypress/: tsconfig.json
cypress/db/: .pylintrc  _setup.py  coordinator-course.py  coordinator-student-course.py  course-menu.py  login.py  mentor-section.py
cypress/db/course/: coordinator-student-course.py  course-menu.py  restricted-courses.py
cypress/e2e/: coordinator-course.cy.ts  course-menu.cy.ts  login.cy.ts  mentor-section.cy.ts  student-course.cy.ts
cypress/fixtures/: courses__sections.json
cypress/support/: commands.ts  e2e.ts  index.d.ts
old_venv/: .project_dir
requirements/: README.md  common.in  common.txt  dev.in  dev.txt  prod.in  prod.txt
scheduler/: models.py
scheduler/migrations/: 0001_initial.py
scheduler_v2/: settings.py  urls.py  wsgi.py
(+284 files in other folders)
