[tool.poetry]
name = "csm_web"
version = "0.1.0"
description = "py deps for csm scheduler"
authors = ["Rohan D'Souza <rodsouza9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
django-csp = "^3.7"
django-extensions = "^3.1.3"
django-heroku = "^0.3.1"
django-postgres-extra = "^2.0.2"
djangorestframework = "^3.12.4"
djangorestframework-camel-case = "^1.2.0"
cryptography = "^3.4.7"
asgiref = "^3.3.4"
Brotli = "^1.0.9"
certifi = "^2020.12.5"
cffi = "^1.14.5"
chardet = "^4.0.0"
colorama = "^0.4.4"
defusedxml = "^0.7.1"
dj-database-url = "^0.5.0"
enforce = "^0.3.4"
factory-boy = "^3.2.0"
Faker = "^8.2.1"
gunicorn = "^20.1.0"
idna = "^3.1"
oauthlib = "^3.1.0"
psycopg2-binary = "^2.8.6"
psycopg2 = "^2.8.6"
pycparser = "^2.20"
PyJWT = "^2.1.0"
python-social-auth = "^0.3.6"
pytz = "^2021.1"
PyYAML = "^5.4.1"
requests-oauthlib = "^1.3.0"
sentry-sdk = "^1.1.0"
six = "^1.16.0"
social-auth-app-django = "^4.0.0"
social-auth-core = "^4.1.0"
sqlparse = "^0.4.1"
text-unidecode = "^1.3"
urllib3 = "^1.26.4"
whitenoise = "^5.2.0"
wrapt = "^1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
