### project info ###

[tool.poetry]
name = "csm-web"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

### dependencies ###

[tool.poetry.dependencies]
python = "3.9.13"
# AWS
boto3 = "^1.26.39"
# django
django = "^4.1.4"
django-csp = "^3.7"
django-extensions = "^3.2.1"
django-heroku = "^0.3.1"
django-postgres-extra = "^2.0.6"
django-storages = "^1.13.2"
djangorestframework = "^3.14.0"
djangorestframework-camel-case = "^1.3.0"
drf-nested-forms = "^1.1.7"
psycopg2-binary = "^2.9.5"
python-social-auth = "^0.3.6"
social-auth-app-django = "^5.0.0"
# heroku
gunicorn = "^20.1.0"
sentry-sdk = "^1.12.1"
# factories
factory-boy = "^3.2.1"
# misc
networkx = "^2.8.8"

[tool.poetry.group.dev.dependencies]
# formatting/linting
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
pylint = "^2.15.9"
pylint-django = "^2.5.3"
# console
ipython = "^8.7.0"
# packages for testing
pytest = "^7.2.0"
pytest-django = "^4.5.2"
freezegun = "^1.2.2"

### tools ###

[tool.isort]
profile = "black"

[tool.pylint.MASTER]
load-plugins = "pylint_django"
#ignore-paths = [
#    ".*/migrations", # ignore migration files
#]
# allow snake_case names of any length
variable-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*)?$"
argument-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*)?$"


[tool.pylint."MESSAGES CONTROL"]
# design: num. branches, num. lines, etc
# similarities: simiar chunks of code
# C0114: missing module docstring
disable = "design,similarities,C0114"

[tool.pylint.PYLINT_DJANGO]
django-settings-module = "csm_web.settings"
